--- a/example/index.html
+++ b/example/index.html
@@ -1,12 +1,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="./../node_modules/requirejs/require.js"></script>
+
 <script type="text/javascript">
 
 require.config({
-	baseUrl: "../src",
+	baseUrl: "../build",
 	waitSeconds: 10
 });
 
 </script>
-
-<script src="app.js"></script>
+<!-- <script src="../build/jjs.js"></script>
+ --><script src="app.js"></script>
