started documentation for file loader, views and controllers

--- a/example/index.html
+++ b/example/index.html
@@ -9,5 +9,4 @@ require.config({
 });
 
 </script>
-<!-- <script src="../build/jjs.js"></script>
- --><script src="app.js"></script>
+<script src="app.js"></script>
