--- a/example/index.html
+++ b/example/index.html
@@ -1,10 +1,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="styles.css">
 <script src="./../node_modules/requirejs/require.js"></script>
 
 <script type="text/javascript">
 
 require.config({
-	baseUrl: "../bower_components/totallyjs/build",
+	baseUrl: "../src/",
 	waitSeconds: 10
 });
 
